[package]
name = "brotli-dec-wasm"
version = "1.3.1"
authors = ["myl7 <myl@myl.moe>"]
edition = "2018"
license = "MIT"
description = "Brotli decompressor for browsers and web workers with WASM, but still having a small size (about 300KB)"
keywords = ["brotli", "brotli-decompressor", "wasm", "rust"]
categories = ["wasm"]
repository = "https://github.com/ustclug-dev/brotli-dec-wasm.git"
homepage = "https://github.com/ustclug-dev/brotli-dec-wasm"
documentation = "https://github.com/ustclug-dev/brotli-dec-wasm#readme"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["size"]
size = ["wee_alloc"]
dev = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
brotli-decompressor = "2.3"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
