[package]
name = "brotli-dec-wasm"
version = "1.3.3"
authors = ["myl7 <myl@myl.moe>"]
edition = "2018"
license = "MIT"
description = "Brotli decompressor for browsers and web workers with WASM, but still having a small size (about 300KB)"
keywords = ["brotli", "brotli-decompressor", "wasm", "rust"]
categories = ["wasm"]
repository = "https://github.com/ustclug-dev/brotli-dec-wasm.git"
homepage = "https://github.com/ustclug-dev/brotli-dec-wasm"
documentation = "https://github.com/ustclug-dev/brotli-dec-wasm#readme"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
brotli-decompressor = "2"
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
opt-level = "s"
lto = true
