[package]
name = "brotli-dec-wasm"
version = "2.0.3"
authors = ["myl7 <myl@myl.moe>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Brotli decompressor for browsers and web workers with WASM, which still has a small size (about 300KB)"
keywords = ["brotli", "brotli-decompressor", "wasm", "rust"]
categories = ["wasm"]
repository = "https://github.com/ustclug-dev/brotli-dec-wasm.git"
homepage = "https://github.com/ustclug-dev/brotli-dec-wasm"
documentation = "https://github.com/ustclug-dev/brotli-dec-wasm#readme"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
brotli-decompressor = "2.3.4"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "s"
lto = true
